New game button added

--- a/src/components/ScrabbleScoreKeeper/ScrabbleScoreKeeper.css
+++ b/src/components/ScrabbleScoreKeeper/ScrabbleScoreKeeper.css
@@ -119,3 +119,8 @@ input[type=checkbox]:checked+label {
   margin: 0;
   transition: max-height 0.3s ease 0s, padding 0.3s ease 0s, margin 0.3s ease 0s;
 }
+
+.new-game {
+  margin-top: 15px;
+  text-decoration: none;
+}
