--- a/src/components/ScoreGrid/ScoreGrid.css
+++ b/src/components/ScoreGrid/ScoreGrid.css
@@ -46,8 +46,19 @@
   text-align: left;
 }
 
+.score-grid-cell .word-cell  .reaper {
+  width: 100%;
+  text-align: center;
+  display: inline-block;
+  padding-left: 30px;
+}
+
 .score-cell {
   text-align: right;
+}
+
+.score-grid-cell td.score-cell {
+  width: 30px;
 }
 
 .score-box {
@@ -103,4 +114,8 @@
 .mobile table.score-grid-cell {
   margin: 6px 0;
   min-height: 30px;
+}
+
+.mobile .score-grid-cell .word-cell  .reaper {
+  padding-left: 30px;
 }
