IOS adaptaion camplete
1. Cleaning unnecessary spaces
2. Meta tag description is simplified.
3. Big-logo transformed from css background into img tag for
GameSettings.
4. noSleep variable is not being created if isTest and isCordova.
5. Images relocated into Css (base64):
  a. Tile
  b.  Modifier-frames
  c. Github logo
  d. Facebook logo
6. Note to add .top padding-top: 20px for second css file in
www/static/css for Cordova
7. Note to change path from absolute to relative in index.js (6
changes).
8. Note to change hidden-input box caret color to font-size:0 for second
css file in www/static/css for Cordova.
9. Note to add <meta name="viewport" content="viewport-fit=cover,
initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width"
/> into index.js

--- a/src/components/GameSettings/GameSettings.css
+++ b/src/components/GameSettings/GameSettings.css
@@ -1,8 +1,11 @@
-div.logo {
-  content: url("/logo.png");
+#big-logo {
+  width: 50%;
   margin: 30px auto;
-  width: 520px;
-  height: 103px;
+  max-width: 520px;
+  max-height: 103px;
+  min-width: 250px;
+  min-height: 50px;
+  display: block;
 }
 
 @media screen and (max-width: 815px) {      /*Mobile version displays smaller logo*/
