--- a/src/components/ScrabbleScoreKeeper/App.css
+++ b/src/components/ScrabbleScoreKeeper/App.css
@@ -122,3 +122,7 @@ input[type=checkbox]:checked+label {
   margin: 0;
   transition: max-height 0.3s ease 0s, padding 0.3s ease 0s, margin 0.3s ease 0s;
 }
+
+.instructions {
+  margin-top: 60px;
+}
