--- a/src/components/ScrabbleInputBox/ScrabbleInputBox.css
+++ b/src/components/ScrabbleInputBox/ScrabbleInputBox.css
@@ -12,6 +12,10 @@
 	z-index: -50;
 }
 
+.cordodva-ios .hidden-input {
+  font-size: 0;
+}
+
 /*Desktop INPUT BOX css*/
 
 .scrabble-tiles {					/*Scrabble tiles container*/
