--- a/src/components/GameSettings/GameSettings.css
+++ b/src/components/GameSettings/GameSettings.css
@@ -1,18 +1,15 @@
-#big-logo {
-  width: 50%;
-  margin: 30px auto;
-  max-width: 520px;
-  max-height: 103px;
-  min-width: 250px;
-  min-height: 50px;
-  display: block;
-}
-
 @media screen and (max-width: 815px) {      /*Mobile version displays smaller logo*/
   div.logo {
     width: 300px;
     height: 60px;
   }
+}
+
+.title-large {
+  text-align: center;
+  float: none;
+  font-size: 3.5rem;
+  margin: 30px auto;
 }
 
 /*Design for LANGUAGE SELECT*/
